--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/s3_vs_setup.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/s3_vs_setup.ipynb
@@ -35,13 +35,55 @@
     "\n",
     "jar_local_path = github.retrieve_jar(MyProj.S3_DOCUMENT_VS, use_local_cache=True)\n",
     "bfs_bucket = open_bucketfs_connection(ai_lab_config)\n",
-    "bfs_path = bfs_utils.put_file(bfs_bucket, jar_local_path)\n",
-    "\n",
+    "bfs_path = bfs_utils.put_file(bfs_bucket, jar_local_path)"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "SQLS = [\n",
+    "        \"OPEN SCHEMA {schema!i}\",\n",
+    "        \"\"\"\n",
+    "--/\n",
+    "CREATE OR REPLACE JAVA ADAPTER SCRIPT S3_FILES_ADAPTER AS\n",
+    "    %scriptclass com.exasol.adapter.RequestDispatcher;\n",
+    "    %jar {jar_path!r};\n",
+    "/\n",
+    "        \"\"\",\n",
+    "        \"\"\"\n",
+    "--/\n",
+    "CREATE OR REPLACE JAVA SET SCRIPT IMPORT_FROM_S3_DOCUMENT_FILES(\n",
+    "  DATA_LOADER VARCHAR(2000000),\n",
+    "  SCHEMA_MAPPING_REQUEST VARCHAR(2000000),\n",
+    "  CONNECTION_NAME VARCHAR(500))\n",
+    "  EMITS(...) AS\n",
+    "    %scriptclass com.exasol.adapter.document.UdfEntryPoint;\n",
+    "    %jar {jar_path!r};\n",
+    "/\n",
+    "        \"\"\",\n",
+    "]"
+   ],
+   "id": "69422ac03d02bb03"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "with open_pyexasol_connection(ai_lab_config) as conn:\n",
-    "    pass\n",
+    "    for sql in SQLS:\n",
+    "        conn.execute(sql, query_params={\n",
+    "            \"schema\": ai_lab_config.db_schema,\n",
+    "            \"jar_path\": bfs_path.as_udf_path(),\n",
+    "        })\n",
     "\n",
     "print(\"S3 Virtual Schema was initialized\")"
-   ]
+   ],
+   "id": "75b31161b2ffbc72"
   }
  ],
  "metadata": {
