--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/s3_vs_setup.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/s3_vs_setup.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "[S3 Virtual Schema](https://github.com/exasol/s3-document-files-virtual-schema) is an Exasol extension that allows access\n",
     "to structured and semi-structured documents residing in AWS S3 buckets. Once configured and set up, you can query JSON, \n",
-    "Parquet and CSV data directly from database, as if they were imported into the Exasol tables.\n",
+    "Parquet and CSV data directly from the database, as if they were imported into the Exasol tables.\n",
     "\n",
     "In this notebook we setting up the extension into database and creating required scripts."
    ],
