--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/s3_vs_setup.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/s3_vs_setup.ipynb
@@ -10,7 +10,7 @@
     "to structured and semi-structured documents residing in AWS S3 buckets. Once configured and set up, you can query JSON, \n",
     "Parquet and CSV data directly from the database, as if they were imported into the Exasol tables.\n",
     "\n",
-    "In this notebook we setting up the extension into database and creating required scripts."
+    "In this notebook we setting up the extension in the database and creating the required scripts."
    ],
    "id": "b2ec73c7cc2ca7de"
   },
