--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/cloud_store_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/cloud_store_config.ipynb
@@ -48,18 +48,13 @@
    "source": [
     "from exasol.nb_connector import github, bfs_utils, cloud_storage\n",
     "from exasol.nb_connector.connections import open_bucketfs_connection, open_pyexasol_connection\n",
-    "import exasol.bucketfs as bfs\n",
-    "import pathlib\n",
     "\n",
     "jar_local_path = github.retrieve_jar(github.Project.CLOUD_STORAGE_EXTENSION, use_local_cache=True)\n",
-    "local_name = jar_local_path.name\n",
-    "bfs_path = bfs.path.BucketPath(local_name, open_bucketfs_connection(ai_lab_config))\n",
-    "with jar_local_path.open(\"rb\") as file:\n",
-    "    bfs_path.write(file)\n",
-    "udf_path = bfs_path.as_udf_path()\n",
+    "bfs_bucket = open_bucketfs_connection(ai_lab_config)\n",
+    "bfs_path = bfs_utils.put_file(bfs_bucket, jar_local_path)\n",
     "\n",
     "with open_pyexasol_connection(ai_lab_config) as conn:\n",
-    "    cloud_storage.setup_scripts(conn, ai_lab_config.db_schema, udf_path)\n",
+    "    cloud_storage.setup_scripts(conn, ai_lab_config.db_schema, bfs_path.as_udf_path())\n",
     "    \n",
     "print(\"Could Storage Extension was initialized\")"
    ]
