Creation of s3 connection

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -20,6 +20,54 @@
    "execution_count": null,
    "source": "%run ./s3_vs_setup.ipynb",
    "id": "275dd63eca698b42"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Create S3 connection",
+   "id": "2b83bf8534f1ee88"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "import pyexasol\n",
+    "from exasol.nb_connector.connections import open_pyexasol_connection"
+   ],
+   "id": "4746ccef6c0fed1c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "sql = \"\"\"\n",
+    "CREATE CONNECTION S3_CONNECTION\n",
+    "  TO ''\n",
+    "  USER ''\n",
+    "  IDENTIFIED BY '{\n",
+    "      \"awsAccessKeyId\": \"\", \n",
+    "      \"awsSecretAccessKey\": \"\", \n",
+    "      \"awsRegion\": \"eu-central-1\", \n",
+    "      \"s3Bucket\": \"ai-lab-example-data-s3\" \n",
+    "  }';\n",
+    "\"\"\"\n",
+    "\n",
+    "with open_pyexasol_connection(ai_lab_config) as conn:\n",
+    "    conn.execute(sql)"
+   ],
+   "id": "47c55fee36abfb34"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "e46e42baa2a61831"
   }
  ],
  "metadata": {
