--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
@@ -82,7 +82,7 @@
     "with download_pre_release(ai_lab_config) as unzipped_files:\n",
     "    project_wheel, slc_tar_gz = unzipped_files\n",
     "\n",
-    "    pip_cmd = ['pip', 'install', f'\"{str(project_wheel)}\"']\n",
+    "    pip_cmd = ['pip', 'install', str(project_wheel)]\n",
     "    subprocess.run(pip_cmd, check=True, capture_output=True)\n",
     "\n",
     "    initialize_text_ai_extension(ai_lab_config, container_file=slc_tar_gz)"
