Fix path in txaie_init.ipynb and fix AMI build

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "%run ../../utils/access_store_ui.ipynb\n",
-    "display(get_access_store_ui('../'))"
+    "display(get_access_store_ui('../../'))"
    ]
   },
   {
