EDML and schema setup

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -34,7 +34,9 @@
    "execution_count": null,
    "source": [
     "import pyexasol\n",
-    "from exasol.nb_connector.connections import open_pyexasol_connection"
+    "import pathlib\n",
+    "from exasol.nb_connector.connections import open_pyexasol_connection\n",
+    "from exasol.nb_connector import bfs_utils"
    ],
    "id": "4746ccef6c0fed1c"
   },
@@ -49,8 +51,6 @@
     "  TO ''\n",
     "  USER ''\n",
     "  IDENTIFIED BY '{\n",
-    "      \"awsAccessKeyId\": \"\", \n",
-    "      \"awsSecretAccessKey\": \"\", \n",
     "      \"awsRegion\": \"eu-central-1\", \n",
     "      \"s3Bucket\": \"ai-lab-example-data-s3\" \n",
     "  }';\n",
@@ -66,8 +66,56 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "# put edml to bucket fs\n",
+    "bfs_bucket = open_bucketfs_connection(ai_lab_config)\n",
+    "bfs_path = bfs_utils.put_file(bfs_bucket, pathlib.Path(\"reuters-edml.json\"))"
+   ],
    "id": "e46e42baa2a61831"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "bfs_path.as_udf_path()",
+   "id": "f0af003ba35b9ff0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "sql = \"\"\"\n",
+    "CREATE VIRTUAL SCHEMA {schema_name!i}_VS USING {schema_name!i}.S3_FILES_ADAPTER WITH\n",
+    "    CONNECTION_NAME = 'S3_CONNECTION'\n",
+    "    MAPPING         = {map_file!s};\n",
+    "\"\"\"\n",
+    "\n",
+    "with open_pyexasol_connection(ai_lab_config) as conn:\n",
+    "    conn.execute(sql, query_params={\n",
+    "        \"schema_name\": ai_lab_config.db_schema,\n",
+    "        \"map_file\": bfs_path.as_udf_path()\n",
+    "    })"
+   ],
+   "id": "e11cb124291c57ce"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "19c4e5922c9b17d2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "f20b6a33bde7a42c"
   }
  ],
  "metadata": {
