--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -106,7 +106,17 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "sql = \"\"\"\n",
+    "select * from AI_LAB_VS.NEWS\n",
+    "limit 10\n",
+    "\"\"\"\n",
+    "\n",
+    "with open_pyexasol_connection(ai_lab_config) as conn:\n",
+    "    res = conn.execute(sql)\n",
+    "    for r in res:\n",
+    "        print(r)"
+   ],
    "id": "19c4e5922c9b17d2"
   },
   {
