--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -1,17 +1,38 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "In this notebook we create a Virtual Schema which accesses Json files on public S3 bucket.\n",
+    "The data we're loading is a part of [Reuter 21578](https://paperswithcode.com/dataset/reuters-21578) dataset, which is a collection of documents with news articles. "
+   ],
+   "id": "79790cc96f0d5bb2"
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "is_executing": true
+    }
    },
-   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "As a first step we setting up the S3 Virtual Schema connector in the database.\n",
+    "You can find more information in the [s3-document-files-virtual-schema](https://github.com/exasol/s3-document-files-virtual-schema/) GitHub repo. "
+   ],
+   "id": "6c0f779ad4690794"
   },
   {
    "metadata": {},
@@ -24,7 +45,15 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Create S3 connection",
+   "source": [
+    "# Create Virtual Schema\n",
+    "\n",
+    "To configure the virtual schema, we need the following:\n",
+    "\n",
+    "1. Create S3 Connection object: in what S3 bucket our data resides. Our data set is on public S3 bucket, so no S3 credentials are needed. If your data is not open to the public, you'll need credentials to be stored in the Connection object.\n",
+    "2. Put EDML file into Bucket FS. EDML describes the mapping between Json structure and desired Virtual Schema tables and columns. In our case the mapping is simple, as every json file describes individual news article with the same set of columns. But EDML supports more complicated scenarios, like table references, foreign keys and missing columns. You can find more details [in the documentation](https://github.com/exasol/virtual-schema-common-document/blob/main/doc/user_guide/edml_user_guide.md)\n",
+    "3. Create Virtual Schema with S3 Connection object and EDML file in Bucket FS. After this step, new Virtual Schema tables are added to the Exasol, and every query from them performs S3 data read."
+   ],
    "id": "2b83bf8534f1ee88"
   },
   {
@@ -100,6 +129,19 @@
     "    })"
    ],
    "id": "e11cb124291c57ce"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Query the data\n",
+    "\n",
+    "Once we have our Virtual Schema created, new table `AI_LAB_VS.NEWS` is available for query. \n",
+    "But you need to be aware of performance overhead. Virtal Schemas don't do any intermediate caching and every request to the Virtual Schema table performs several S3 data reads, which might be slow.\n",
+    "\n",
+    "If you're going to access the data several times, it might make sense to create the new table and copy the data from VS table in a normal table. Here we don't do that for simplicity - we do just one query and that's fine. "
+   ],
+   "id": "ee0b18f1ed03d5a4"
   },
   {
    "metadata": {},
