avoid S3 connection object naming clash

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -76,7 +76,7 @@
    "execution_count": null,
    "source": [
     "sql = \"\"\"\n",
-    "CREATE CONNECTION S3_CONNECTION\n",
+    "CREATE CONNECTION S3_CONNECTION_VS\n",
     "  TO ''\n",
     "  USER ''\n",
     "  IDENTIFIED BY '{\n",
@@ -118,7 +118,7 @@
    "source": [
     "sql = \"\"\"\n",
     "CREATE VIRTUAL SCHEMA {schema_name!i}_VS USING {schema_name!i}.S3_FILES_ADAPTER WITH\n",
-    "    CONNECTION_NAME = 'S3_CONNECTION'\n",
+    "    CONNECTION_NAME = 'S3_CONNECTION_VS'\n",
     "    MAPPING         = {map_file!s};\n",
     "\"\"\"\n",
     "\n",
