--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -150,12 +150,14 @@
    "execution_count": null,
    "source": [
     "sql = \"\"\"\n",
-    "select * from AI_LAB_VS.NEWS\n",
+    "select * from {schema_name!i}_VS.NEWS\n",
     "limit 10\n",
     "\"\"\"\n",
     "\n",
     "with open_pyexasol_connection(ai_lab_config) as conn:\n",
-    "    res = conn.execute(sql)\n",
+    "    res = conn.execute(sql, query_params={\n",
+    "        \"schema_name\": ai_lab_config.db_schema\n",
+    "    })\n",
     "    for r in res:\n",
     "        print(r)"
    ],
