--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -150,7 +150,7 @@
    "execution_count": null,
    "source": [
     "sql = \"\"\"\n",
-    "select * from {schema_name!i}_VS.NEWS\n",
+    "select title, news_id from {schema_name!i}_VS.NEWS\n",
     "limit 10\n",
     "\"\"\"\n",
     "\n",
@@ -165,11 +165,62 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Besides the `NEWS` table, where each row is a news article, we have reference table with topics associated with every article.\n",
+    "In our EDML file, `toTableMapping` was used, which created a second table `NEWS_TOPICS`, containing flattened list of topics associated with `NEWS_ID`."
+   ],
+   "id": "fb187115aa035660"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "f20b6a33bde7a42c"
+   "source": [
+    "sql = \"\"\"\n",
+    "select *\n",
+    "from {schema_name!i}_VS.NEWS_TOPICS\n",
+    "limit 10\n",
+    "\"\"\"\n",
+    "\n",
+    "with open_pyexasol_connection(ai_lab_config) as conn:\n",
+    "    res = conn.execute(sql, query_params={\n",
+    "        \"schema_name\": ai_lab_config.db_schema\n",
+    "    })\n",
+    "    for r in res:\n",
+    "        print(r)"
+   ],
+   "id": "5b7258505e2a0a3d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "So, we can can get most frequent topics for our dataset, for example",
+   "id": "c583bab31ea654cf"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "sql = \"\"\"\n",
+    "select NAME, count(*)\n",
+    "from {schema_name!i}_VS.NEWS_TOPICS\n",
+    "group by 1\n",
+    "order by 2 desc\n",
+    "limit 10\n",
+    "\"\"\"\n",
+    "\n",
+    "with open_pyexasol_connection(ai_lab_config) as conn:\n",
+    "    res = conn.execute(sql, query_params={\n",
+    "        \"schema_name\": ai_lab_config.db_schema\n",
+    "    })\n",
+    "    for r in res:\n",
+    "        print(r)"
+   ],
+   "id": "e1f938fa095315c0"
   }
  ],
  "metadata": {
