Reference table description

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -92,6 +92,46 @@
   },
   {
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Our EDML extracts 5 fields from json files:\n",
+    "* `title`: as a varchar\n",
+    "* `id` (named as `NEWS_ID`): article identifier stored as a string\n",
+    "* `body`: text of the article up to 1024 characters long\n",
+    "* `date`: timestamp of the article\n",
+    "\n",
+    "The 5th field `topics` is extracted as a reference table.\n",
+    "In the json data topics are represented as a list of tags associated with the article, for example:\n",
+    "\n",
+    "```\n",
+    "    \"topics\": [\n",
+    "      \"grain\",\n",
+    "      \"wheat\",\n",
+    "      \"corn\",\n",
+    "      \"barley\",\n",
+    "      \"oat\",\n",
+    "      \"sorghum\"\n",
+    "    ],\n",
+    "```\n",
+    "\n",
+    "To have convenient access to topics, we use `toTableMapping` EDML feature, which creates a second table `NEWS_TOPICS`, keeping list of topics and `NEWS_ID`:\n",
+    "\n",
+    "```\n",
+    "      \"topics\": {\n",
+    "        \"toTableMapping\": {\n",
+    "          \"mapping\": {\n",
+    "            \"toVarcharMapping\": {\n",
+    "              \"destinationName\": \"NAME\"\n",
+    "            }\n",
+    "          }\n",
+    "        }\n",
+    "      },\n",
+    "```"
+   ],
+   "id": "5d450a20e2ce88b5"
+  },
+  {
+   "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
