--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/work_in_progress/text_ai/txaie_init.ipynb
@@ -12,7 +12,7 @@
     "## Prerequisites\n",
     "\n",
     "Prior to using this notebook one needs to complete the following steps:\n",
-    "1. [Configure the AI-Lab](../main_config.ipynb).\n",
+    "1. [Configure the AI-Lab](../../main_config.ipynb).\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -26,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../utils/access_store_ui.ipynb\n",
-    "display(get_access_store_ui('../'))"
+    "%run ../../utils/access_store_ui.ipynb\n",
+    "display(get_access_store_ui('../../'))"
    ]
   },
   {
