--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/text_ai/txaie_init.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Text AI Extension initialization\n",
     "\n",
-    "Here we will bring the Text AI Extension functionality up and running. We will do this via a single call to function in the support library.\n",
+    "Here we will bring the Text AI Extension functionality up and running. We will do this via a single call to a function in the support library.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
