Example with join of two tables

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -261,6 +261,37 @@
     "        print(r)"
    ],
    "id": "e1f938fa095315c0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Both tables `NEWS` and `NEWS_TOPICS` could be joined on `NEWS_ID` column:",
+   "id": "8dd75dbbd2a7fd0b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "sql = \"\"\"\n",
+    "select topics.name, news.*\n",
+    "from \n",
+    "    {schema_name!i}_VS.NEWS as news,\n",
+    "    {schema_name!i}_VS.NEWS_TOPICS as topics\n",
+    "where news.NEWS_ID = topics.NEWS_NEWS_ID\n",
+    "\n",
+    "limit 10\n",
+    "\"\"\"\n",
+    "\n",
+    "with open_pyexasol_connection(ai_lab_config) as conn:\n",
+    "    res = conn.execute(sql, query_params={\n",
+    "        \"schema_name\": ai_lab_config.db_schema\n",
+    "    })\n",
+    "    for r in res:\n",
+    "        print(r)"
+   ],
+   "id": "53757c4e163bc774"
   }
  ],
  "metadata": {
