--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "In this notebook we create a Virtual Schema which accesses Json files on public S3 bucket.\n",
+    "In this notebook we create a Virtual Schema which accesses Json files on a public S3 bucket.\n",
     "The data we're loading is a part of [Reuter 21578](https://paperswithcode.com/dataset/reuters-21578) dataset, which is a collection of documents with news articles. "
    ],
    "id": "79790cc96f0d5bb2"
@@ -50,8 +50,8 @@
     "\n",
     "To configure the virtual schema, we need the following:\n",
     "\n",
-    "1. Create S3 Connection object: in what S3 bucket our data resides. Our data set is on public S3 bucket, so no S3 credentials are needed. If your data is not open to the public, you'll need credentials to be stored in the Connection object.\n",
-    "2. Put EDML file into Bucket FS. EDML describes the mapping between Json structure and desired Virtual Schema tables and columns. In our case the mapping is simple, as every json file describes individual news article with the same set of columns. But EDML supports more complicated scenarios, like table references, foreign keys and missing columns. You can find more details [in the documentation](https://github.com/exasol/virtual-schema-common-document/blob/main/doc/user_guide/edml_user_guide.md)\n",
+    "1. Create an S3 Connection object: in what S3 bucket our data resides. Our data set is on the public S3 bucket, so no S3 credentials are needed. If your data is not open to the public, you'll need credentials to be stored in the Connection object.\n",
+    "2. Put EDML file into teh Bucket FS. EDML describes the mapping between Json structure and desired Virtual Schema tables and columns. In our case the mapping is simple, as every json file describes individual news article with the same set of columns. But EDML supports more complicated scenarios, like table references, foreign keys and missing columns. You can find more details [in the documentation](https://github.com/exasol/virtual-schema-common-document/blob/main/doc/user_guide/edml_user_guide.md)\n",
     "3. Create Virtual Schema with S3 Connection object and EDML file in Bucket FS. After this step, new Virtual Schema tables are added to the Exasol, and every query from them performs S3 data read."
    ],
    "id": "2b83bf8534f1ee88"
