SaaS has issues with timestamp field

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -275,7 +275,7 @@
    "execution_count": null,
    "source": [
     "sql = \"\"\"\n",
-    "select topics.name, news.*\n",
+    "select topics.name, news.title, news.news_id\n",
     "from \n",
     "    {schema_name!i}_VS.NEWS as news,\n",
     "    {schema_name!i}_VS.NEWS_TOPICS as topics\n",
