Remove date fields

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/02_s3_vs_reuters.ipynb
@@ -94,13 +94,12 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "Our EDML extracts 5 fields from json files:\n",
+    "Our EDML extracts 3 fields from json files:\n",
     "* `title`: as a varchar\n",
     "* `id` (named as `NEWS_ID`): article identifier stored as a string\n",
     "* `body`: text of the article up to 1024 characters long\n",
-    "* `date`: timestamp of the article\n",
     "\n",
-    "The 5th field `topics` is extracted as a reference table.\n",
+    "In addition to those 3 fields, we have field `topics`, which is extracted as a reference table.\n",
     "In the json data topics are represented as a list of tags associated with the article, for example:\n",
     "\n",
     "```\n",
